tests/ui/feature-gates/feature-gate-abi_swift.stderr
error[E0658]: the extern "Swift" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi_swift.rs:14:8
   |
LL | extern "Swift" fn f() {}
   |        ^^^^^^^
   |
   = note: see issue #64582 <https://github.com/rust-lang/rust/issues/64582> for more information
   = help: add `#![feature(abi_swift)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "Swift" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi_swift.rs:17:12
   |
LL |     extern "Swift" fn m();
   |            ^^^^^^^
   |
   = note: see issue #64582 <https://github.com/rust-lang/rust/issues/64582> for more information
   = help: add `#![feature(abi_swift)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "Swift" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi_swift.rs:19:12
   |
LL |     extern "Swift" fn dm() {}
   |            ^^^^^^^
   |
   = note: see issue #64582 <https://github.com/rust-lang/rust/issues/64582> for more information
   = help: add `#![feature(abi_swift)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "Swift" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi_swift.rs:24:12
   |
LL |     extern "Swift" fn m() {}
   |            ^^^^^^^
   |
   = note: see issue #64582 <https://github.com/rust-lang/rust/issues/64582> for more information
   = help: add `#![feature(abi_swift)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "Swift" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi_swift.rs:28:12
   |
LL |     extern "Swift" fn im() {}
   |            ^^^^^^^
   |
   = note: see issue #64582 <https://github.com/rust-lang/rust/issues/64582> for more information
   = help: add `#![feature(abi_swift)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "Swift" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi_swift.rs:31:18
   |
LL | type TA = extern "Swift" fn();
   |                  ^^^^^^^
   |
   = note: see issue #64582 <https://github.com/rust-lang/rust/issues/64582> for more information
   = help: add `#![feature(abi_swift)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "Swift" ABI is experimental and subject to change
  --> $DIR/feature-gate-abi_swift.rs:33:8
   |
LL | extern "Swift" {}
   |        ^^^^^^^
   |
   = note: see issue #64582 <https://github.com/rust-lang/rust/issues/64582> for more information
   = help: add `#![feature(abi_swift)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
